# CIAF

./: .gitignore  CHANGELOG.md  CIAF_Complete_Functions_Showcase.ipynb  CIAF_Complete_Implementation_Guide.md  CIAF_Data_Tracking_Enhancement.md  CLEANUP_SUMMARY.md  COMPLIANCE_README.md  DATA_TRACKING_EXPLANATION.md  Enhanced_Compliance_Dashboard_Implementation.md  LICENSE  METADATA_STORAGE_GUIDE.md  METADATA_VIEWER_README.md  MISSION_COMPLETE.md  Makefile  PATENT_SUBMISSION.md  PERFORMANCE_VALIDATION_REPORT.md  README.md  REORGANIZATION_PLAN.md  REORGANIZATION_STATUS.md  TRUE_LAZY_UPDATE_SUMMARY.md  best_practices_example.py  ciaf_360_compliance_demo.py  ciaf_360_compliance_metadata.json  ciaf_3d_visualization_demo.html  ciaf_3d_visualization_demo.py  ciaf_codebase_overview.py  ciaf_compliance_report.json  ciaf_comprehensive_demo.py  ciaf_provenance_3d.gltf  ciaf_provenance_graph.json  ciaf_simple_visualization_demo.html  ciaf_true_lazy_performance_test.py  compliance_demo_comprehensive.py  compliance_demo_simple.py  demo_config.json  enhanced_model_test.py  enhanced_test_ascii.py  issues  patent_validation_test.py  performance_test_suite.py  (+13 more)
Test/: README.md  ciaf_tracking_demo.py  metadata_demo.py  setup_metadata.py  test_models.py
Test/models/: credit_scoring_model.py  ct_scan_model.py  job_classifier_model.py  job_classifier_trained.pkl
Test/web/: app.py
Test/web/templates/: 404.html  compliance_dashboard.html  index.html  test_credit_scoring.html  test_ct_scan.html  test_job_classifier.html
ciaf/: __init__.py  metadata_config.py  metadata_integration.py  metadata_storage.py  metadata_storage_compressed.py
ciaf/anchoring/: __init__.py  dataset_anchor.py  lazy_manager.py  simple_lazy_manager.py  true_lazy_manager.py
ciaf/api/: __init__.py  framework.py  framework_new.py
ciaf/compliance/: __init__.py  audit_trails.py  corrective_action_log.py  cybersecurity.py  documentation.py  pre_ingestion_validator.py  regulatory_mapping.py  reports.py  risk_assessment.py  stakeholder_impact.py  transparency_reports.py  uncertainty_quantification.py  validators.py  visualization.py
ciaf/core/: __init__.py  crypto.py  keys.py  merkle.py
ciaf/explainability/: __init__.py
ciaf/inference/: __init__.py  receipts.py
ciaf/metadata_tags/: __init__.py
ciaf/preprocessing/: __init__.py
ciaf/provenance/: __init__.py  capsules.py  snapshots.py
ciaf/simulation/: __init__.py  ml_framework.py  mock_llm.py
ciaf/uncertainty/: __init__.py
ciaf/wrappers/: __init__.py  model_wrapper.py
compliance_reports/: ciaf_compliance_report_20250803_083529.json
docs/compliance/: CIAF_360_COMPLIANCE_ACHIEVEMENT.md  regulatory_mapping_guide.md
docs/legal/: enhanced_markdown_to_pdf.py  markdown_to_pdf.py  simple_markdown_to_pdf.py
docs/technical/: CIAF_Complete_Codebase_Documentation.md  compressed_metadata_storage.md
docs/technical/legacy/: CIAF Extension to ANN.docx  Framework.md  lazy_capsule_materialization.md
examples/: README.md  __init__.py  compliance_dashboard.html  healthcare_ctscan_dashboard.html
examples/advanced/: best_practices_example.py  ciaf_comprehensive_demo.py  compressed_metadata_demo.py
examples/basic/: practical_example.py  pre_ingestion_demo.py  quick_start.py  sklearn_example.py
examples/compliance/: ciaf_360_compliance_demo.py  compliance_dashboard_demo.py  compliance_demo_comprehensive.py  compliance_demo_simple.py  eu_ai_act_demo.py  regulatory_mapping_dashboard.html
patents/: patent_01_lazy_capsule_materialization.md  patent_02_zero_knowledge_provenance.md  patent_03_cryptographic_audit_framework.md  patent_04_3d_visualization.md  patent_05_metadata_tags.md  patent_06_node_activation_provenance.md  patent_07_multi_framework_compliance.md  patent_08_uncertainty_quantification.md
scripts/: clean_build.py  run_tests.py  setup_dev_env.py
tests/: __init__.py  test_basic_integration.py  test_ciaf.py  test_ciaf_cleaned.py
tests/integration/: test_compliance_dashboard.py
tests/unit/: test_model_compatibility.py  test_numerical_regression.py
tools/: __init__.py
tools/compliance/: generate_compliance_report.py  report_generator.py
tools/metadata/: export.py  metadata_viewer_demo.py  migration.py
